# itmo

./: .gitignore  .gitmodules  README.md
algorithms/: CMakeLists.txt  README.md
algorithms/dfs-mst/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp
algorithms/dynamic-programming/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp
algorithms/search-tree/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp
algorithms/segment-tree/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  L.cpp
algorithms/shortest-path-games/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp
algorithms/sort-heap-binary-search/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp
algorithms/stack-queue-dsu/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp
algorithms/strings/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  L.cpp  M.cpp
algorithms/tree-requests/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  L.cpp
cpp/: README.md
discrete-math/: README.md
discrete-math/automata/: CMakeLists.txt
discrete-math/cf-grammar/: CMakeLists.txt
discrete-math/graphs/: CMakeLists.txt
os/: README.md
os/LAB6/: copy.bat  diskpart.txt  i.bat  ii.bat  iii.bat  iv.bat  systeminfo.txt
os/lab1/: final.sh  i.sh  ii.sh  iii.sh  iv.sh  v.sh  vi.sh  vii.sh  viii.sh  x.sh
os/lab2/: final.sh  i.sh  ii.sh  iii.sh  iv.sh  v.sh  vi.sh  vii.sh
os/lab3/: final_generator.sh  i.sh  ii.sh  (+8 more)
(+148 files in other folders)
